--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <title>Dropdowns</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        .drop-down-content {
+            display: none;
+        }
         
+        .drop-down:hover drop-down-content {
+            display: block;
+        }
     </style>
 </head>
 
