--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             display: none;
         }
         
-        .drop-down:hover drop-down-content {
+        .drop-down:hover .drop-down-content {
             display: block;
         }
     </style>
